<resources>
    <string name="app_name">TipCalc</string>
    <string name="amount_text" translatable="false">00</string>
    <string name="hint_text">Enter amount</string>
    <string name="label_percent" translatable="false">15%</string>
    <string name="label_tip">Tip</string>
    <string name="label_total">Total</string>
    <string name="b_send">Send message</string>
    <string name="b_thank">Thanks!</string>
	<string name="b_thanks"> Lovely!\n\tDelicious!\n\t\tHomelike!</string>
</resources>
