<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity">

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:ems="12"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        tools:targetApi="o"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_percent,tv_label_tip,tv_label_total" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/label_percent"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/et_amount" />

    <SeekBar
        android:id="@+id/sb_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:max="30"
        android:progress="15"
        app:layout_constraintTop_toTopOf="@+id/tv_percent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_percent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/label_tip"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_percent" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/amount_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_tip"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <TextView
        android:id="@+id/tv_label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/label_total"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_tip" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/amount_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_total"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/b_thank"
        app:layout_constraintTop_toBottomOf="@+id/tv_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>